[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email Triage AI Environment"
authors = [
  {name = "Sai Teja"}
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "uvicorn app:app --host 0.0.0.0 --port 7860"

[tool.openenv]
entrypoint = "app.py"
