[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email Triage AI Environment"
authors = [
  {name = "Sai Teja"}
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openenv-core>=0.2.0",
  "openai"
]

[project.scripts]
server = "app:main"

[tool.openenv]
entrypoint = "app.py"
grader = "grader"
